--- a/index.html
+++ b/index.html
@@ -302,15 +302,15 @@
                     </div>
                     
                     <div class="media-social">
-                        <a href="#" target="_blank" class="social-icon">
+                        <a href="https://www.instagram.com/yuujht_2000/" target="_blank" class="social-icon">
                             <i class="uil uil-instagram"></i>
                             <h4 class="media-detail">Instagram</h4>
                         </a>
-                        <a href="#" target="_blank" class="social-icon">
+                        <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                             <h4 class="media-detail">Linkedin</h4>
                         </a>
-                        <a href="#" target="_blank" class="social-icon">
+                        <a href="https://github.com/yuu-2000" target="_blank" class="social-icon">
                             <i class="uil uil-github-alt"></i>
                             <h4 class="media-detail">Github</h4>
                         </a>
