--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <div class="home-content">
                     <h1 class="bg-text">Portfolio</h1>
                     <div class="home-social">
-                        <a href="#" target="_blank" class="home-social-icon">
-                            <i class="uil uil-envelope-alt"></i>
+                        <a href="https://www.instagram.com/yuujht_2000/" target="_blank" class="home-social-icon">
+                            <i class="uil uil-instagram"></i>
                         </a>
-                        <a href="#" target="_blank" class="home-social-icon">
+                        <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="home-social-icon">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-                        <a href="#" target="_blank" class="home-social-icon">
+                        <a href="https://github.com/yuu-2000" target="_blank" class="home-social-icon">
                             <i class="uil uil-github-alt"></i>
                         </a>
                     </div>
