--- a/recent_works/game.html
+++ b/recent_works/game.html
@@ -70,6 +70,34 @@
                     <!--=== portfolio 1 ===-->
                     <div class="portfolio-card grid">
                         <div class="portfolio-content grid">
+                            <iframe class="portfolio-video" src="https://www.youtube.com/embed/NFiI3F2eDec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <div class="portfolio-data">
+                                <span class="portfolio-tag">#VR #Unity #Individual Work</span>
+                                <h3 class="portfolio-title">VR Prototype</h3>
+                                <p class="portfolio-desc">
+                                    The game prototype is designed and modelled using Unity.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!--=== portfolio 2 ===-->
+                    <div class="portfolio-card grid">
+                        <div class="portfolio-content grid">
+                            <iframe class="portfolio-video" src="https://www.youtube.com/embed/do08THSwa1M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <div class="portfolio-data">
+                                <span class="portfolio-tag">#Construction #Maya #Unity #Individual Work</span>
+                                <h3 class="portfolio-title">VR Environment Construction</h3>
+                                <p class="portfolio-desc">
+                                    The game environment is designed using free assets from Unity Assets Store and modelled Maya.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <!--=== portfolio 3 ===-->
+                    <div class="portfolio-card grid">
+                        <div class="portfolio-content grid">
                             <iframe class="portfolio-video" src="https://www.youtube.com/embed/2swvcCoELXo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <div class="portfolio-data">
                                 <span class="portfolio-tag">#Terrain #Unity #Individual Work</span>
