--- a/recent_works/ui_frontend.html
+++ b/recent_works/ui_frontend.html
@@ -72,7 +72,7 @@
                         <div class="portfolio-content">
                             <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FucZuO2Yj1henzTcFv0q6WB%2FHealthLife-Prototype%3Fnode-id%3D0%253A1%26t%3DlTvU3VcJsWl0EO4w-1" allowfullscreen width="100%" max-width="600" height="500" figma-demo></iframe>
                             <div class="portfolio-data">
-                                <span class="portfolio-tag">#UI Design #Prototype #Figma #Group Work</span>
+                                <span class="portfolio-tag">#UI #Prototype #Figma #Group Work</span>
                                 <h3 class="portfolio-title">Healthy Life</h3>
                                 <p class="portfolio-desc">
                                     HealthyLife is aimed at people of all ages. It will tailor a healthy lifestyle for users according to their personal information, so that each user can live a healthier and healthier life. 
@@ -93,7 +93,7 @@
                             <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FAPKzXoqZeNIiCkGzeEx1JT%2FStoria%3Fnode-id%3D1%253A3%26t%3DuxTzF63eEsjRNfks-1" allowfullscreen width="100%" max-width="600" height="500" figma-demo></iframe>
                             <iframe class="portfolio-video" src="https://www.youtube.com/embed/1uio0uwWEn0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <div class="portfolio-data">
-                                    <span class="portfolio-tag">#Prototype #Figma #Demo #Android Studio #Group Work</span>
+                                    <span class="portfolio-tag">#Prototype #Figma #Android Studio #Group Work</span>
                                     <h3 class="portfolio-title">Storia</h3>
                                     <p class="portfolio-desc">
                                     Storia is a learning-based interactive storytelling application. This application offers users a variety of fairy tales not typically found in markets. By making different decisions, users can decide how the story ends.
@@ -114,7 +114,7 @@
                         <div class="portfolio-content grid">
                             <iframe class="portfolio-video" src="https://www.youtube.com/embed/ExsO3YzFK54" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <div class="portfolio-data">
-                                    <span class="portfolio-tag">#Demo #Android Studio #Individual Work</span>
+                                    <span class="portfolio-tag">#Android Studio #Individual Work</span>
                                     <h3 class="portfolio-title">Cafe Time Menu</h3>
                                     <p class="portfolio-desc">
                                     Café Time Menu offers digital interactive menus for cafes, allowing customers to view menus online and learn about the most recent menus. I used SQL for database storage.
