--- a/recent_works/game.html
+++ b/recent_works/game.html
@@ -89,7 +89,7 @@
                                 <span class="portfolio-tag">#Construction #Maya #Unity #Individual Work</span>
                                 <h3 class="portfolio-title">VR Environment Construction</h3>
                                 <p class="portfolio-desc">
-                                    The game environment is designed using free assets from Unity Assets Store and modelled Maya.
+                                    The game environment is designed using free assets from Unity Assets Store and modelled using Maya.
                                 </p>
                             </div>
                         </div>
