--- a/recent_works/ui_frontend.html
+++ b/recent_works/ui_frontend.html
@@ -130,7 +130,7 @@
                                 <span class="portfolio-tag">#UI Design #Figma #HTML #CSS #Javascript #Individual Work</span>
                                 <h3 class="portfolio-title">Portfolio Website</h3>
                                 <p class="portfolio-desc">
-                                    A portfolio website to showcase my recent works and let others know about me.
+                                    A responsive portfolio website to showcase my recent works and let others know about me.
                                     These are the earlier designs of this website.
 
                                 </p>
