--- a/recent_works/modeling.html
+++ b/recent_works/modeling.html
@@ -44,7 +44,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="../recent_works/game" class="nav-link">
-                                <i class="uil uil-game-structure nav-icon"></i>Game Design/Development
+                                <i class="uil uil-game-structure nav-icon"></i>Game Development
                             </a>
                         </li>
                     </ul>
