--- a/index.html
+++ b/index.html
@@ -188,17 +188,16 @@
                         <div class="about-infomation">
                             <h4 class="about-info-title">I'm confidence in:</h4>
                             <ul class="about-info-name">
+                                <li>Mobile Application Development (Android Studio & Figma)</li>
                                 <li>Front-End Development (HTML & CSS)</li>
-                                <li>Mobile Application Development (Android Studio)</li>
-                                <li>User Interface Design (Figma)</li>
                             </ul>
                         </div>
                         <div class="about-infomation">
                             <h4 class="about-info-title">I'm also passionate in:</h4>
                             <ul class="about-info-name">
+                                <li>Game Design & Development (Unity)</li>
                                 <li>3D Modeling (3Ds & Maya)</li>
                                 <li>Animation (Animate CC & Maya)</li>
-                                <li>Game Development (Unity)</li>
                                 <li>Non-linear Editing (Premiere Pro & After Effect)</li>
                             </ul>
                         </div>
