--- a/index.html
+++ b/index.html
@@ -186,19 +186,14 @@
                     <p class="about-desc">Hi, my full name is <span>Tan Jia Hui</span>, you also can call me <span>Jia Hui</span>. I still a student majoring in Digital Media Technology at Xiamen University Malaysia.
                     <div class="about-info">
                         <div class="about-infomation">
-                            <h4 class="about-info-title">I'm confidence in:</h4>
+                            <h4 class="about-info-title">I'm passionate in:</h4>
                             <ul class="about-info-name">
                                 <li>Mobile Application Development (Android Studio & Figma)</li>
-                                <li>Front-End Development (HTML & CSS)</li>
-                            </ul>
-                        </div>
-                        <div class="about-infomation">
-                            <h4 class="about-info-title">I'm also passionate in:</h4>
-                            <ul class="about-info-name">
                                 <li>Game Design & Development (Unity)</li>
                                 <li>3D Modeling (3Ds & Maya)</li>
                                 <li>Animation (Animate CC & Maya)</li>
-                                <li>Non-linear Editing (Premiere Pro & After Effect)</li>
+                                <li>Front-End Development (HTML & CSS)</li>
+                                <li>Video Editing (Premiere Pro & After Effect)</li>
                             </ul>
                         </div>
                     </div>
