--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="home-content">
                     <h1 class="bg-text">Portfolio</h1>
                     <div class="home-social">
-                        <a href="https://www.instagram.com/yuujht_2000/" target="_blank" class="home-social-icon">
-                            <i class="uil uil-instagram"></i>
+                        <a href="mailto:jhtan2000@gmail.com" target="_blank" class="home-social-icon">
+                            <i class="uil uil-envelope-alt"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="home-social-icon">
                             <i class="uil uil-linkedin-alt"></i>
@@ -290,8 +290,8 @@
                     </div>
                     
                     <div class="media-social">
-                        <a href="https://www.instagram.com/yuujht_2000/" target="_blank" class="social-icon">
-                            <i class="uil uil-instagram"></i>
+                        <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-icon">
+                            <i class="uil uil-envelope-alt"></i>
                             <h4 class="media-detail">Instagram</h4>
                         </a>
                         <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="social-icon">
