--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <div class="media-social">
                         <a href="mailto:jhtan2000@gmail.com" target="_blank" class="social-icon">
                             <i class="uil uil-envelope-alt"></i>
-                            <h4 class="media-detail">Instagram</h4>
+                            <h4 class="media-detail">Gmail</h4>
                         </a>
                         <a href="https://www.linkedin.com/in/jiahuitan1202/" target="_blank" class="social-icon">
                             <i class="uil uil-linkedin-alt"></i>
