--- a/recent_works/modeling.html
+++ b/recent_works/modeling.html
@@ -86,8 +86,22 @@
                             </div>
                         </div>
                     </div>
-
+                    
                     <!--=== portfolio 2 ===-->
+                    <div class="portfolio-card grid">
+                        <div class="portfolio-content grid">
+                            <img src="projects/Modeling/Render10.jpg" alt="" style="max-width: 512px; width: 100%; margin-bottom: .2rem;">
+                            <div class="portfolio-data">
+                                <span class="portfolio-tag">#Maya #Individual Work</span>
+                                <h3 class="portfolio-title">Kitchen Assets Modeling</h3>
+                                <p class="portfolio-desc">
+                                    The model of kitchen objects without texturing.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--=== portfolio 3 ===-->
                     <div class="portfolio-card grid">
                         <div class="portfolio-content grid">
                             <img src="projects/Modeling/Vase Modeling/Rendered 1.jpg" alt="" style="max-width: 512px; width: 100%; margin-bottom: .2rem;">
