--- a/recent_works/ui_frontend.html
+++ b/recent_works/ui_frontend.html
@@ -61,7 +61,7 @@
 
         <!--========== CONTENT =========-->
         <section class="portfolio section" id="portfolio">
-            <h2 class="section-title">UI & Front-End Development</h2>
+            <h2 class="section-title">UI & Front-End</h2>
 
             <div class="portfolio-container container">
                 <!--=== UI/UX ===-->
