--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             </h2>
             <ul class="projects__list grid">
                 <li class="projects__card">
-                    <a href="./projects/animation" class="projects__link">
+                    <a href="./projects/animation" target="_blank" class="projects__link">
                     <h2 class="projects__text">Animation</h2>
                     <div class="projects__overlay"></div>
                     <img src="./assets/images/Animation.jpg" alt="" class="projects__img">
                     </a>
                 </li>
                 <li class="projects__card">
-                    <a href="./projects/app" class="projects__link">
+                    <a href="./projects/app" target="_blank" class="projects__link">
                     <h2 class="projects__text">Mobile App with UI / UX</h2>
                     <div class="projects__overlay"></div>
                     <img src="./assets/images/UI.jpg" alt="" class="projects__img">
@@ -104,7 +104,7 @@
                     </a>
                 </li>
                 <li class="projects__card">
-                    <a href="./projects/video" class="projects__link">
+                    <a href="./projects/video" target="_blank" class="projects__link">
                     <h2 class="projects__text">Video Editing</h2>
                     <div class="projects__overlay"></div>
                     <img src="./assets/images/Video.jpg" alt="" class="projects__img">
