--- a/projects/animation.html
+++ b/projects/animation.html
@@ -32,19 +32,19 @@
             <span class="nav-title">Menu</span>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Mobile App</a>
+                    <a href="./app" class="nav-link">Mobile App</a>
                 </li>
                 <span> / </span>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Game Development</a>
+                    <a href="./game" class="nav-link">Game Development</a>
                 </li>
                 <!-- <span> / </span>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Animation</a>
+                    <a href="./animation" class="nav-link">Animation</a>
                 </li> -->
                 <span> / </span>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Video Editing</a>
+                    <a href="./video" class="nav-link">Video Editing</a>
                 </li>
             </ul>
             <!-- Close Button -->
