--- a/projects/animation.html
+++ b/projects/animation.html
@@ -27,7 +27,7 @@
 -->
 <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav-logo">JH.</a>
+        <a href="#" class="nav-logo">My Works.</a>
         <div class="nav-menu" id="nav-menu">
             <span class="nav-title">Menu</span>
             <ul class="nav-list">
